--- a/Yuzu.Core/Yuzu.Core.csproj
+++ b/Yuzu.Core/Yuzu.Core.csproj
@@ -42,6 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Track\FieldLocation.cs" />
+    <Compile Include="Track\FieldObject.cs" />
+    <Compile Include="Track\Note.cs" />
+    <Compile Include="Track\SurfaceLane.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
