Add Score class for Editing

--- a/Yuzu.Core/Yuzu.Core.csproj
+++ b/Yuzu.Core/Yuzu.Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Track\Field.cs" />
     <Compile Include="Track\FieldLocation.cs" />
     <Compile Include="Track\FieldObject.cs" />
     <Compile Include="Track\Note.cs" />
