--- a/Yuzu/Yuzu.csproj
+++ b/Yuzu/Yuzu.csproj
@@ -79,6 +79,12 @@
     <Compile Include="UI\Data\Track\INoteContainer.cs" />
     <Compile Include="UI\Data\Track\SideLane.cs" />
     <Compile Include="UI\Data\Track\SurfaceLane.cs" />
+    <Compile Include="UI\Forms\BookPropertiesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Forms\BookPropertiesForm.Designer.cs">
+      <DependentUpon>BookPropertiesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Forms\CheckableToolStripSplitButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -118,6 +124,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\Forms\BookPropertiesForm.resx">
+      <DependentUpon>BookPropertiesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Forms\VersionInfoForm.resx">
       <DependentUpon>VersionInfoForm.cs</DependentUpon>
     </EmbeddedResource>
