--- a/Yuzu/Yuzu.csproj
+++ b/Yuzu/Yuzu.csproj
@@ -127,6 +127,7 @@
       <DependentUpon>NoteView.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Operations\CompositeOperation.cs" />
+    <Compile Include="UI\Operations\EventOperations.cs" />
     <Compile Include="UI\Operations\FieldObjectOperations.cs" />
     <Compile Include="UI\Operations\IOperation.cs" />
     <Compile Include="UI\Operations\NoteOperations.cs" />
