エクスポート用プラグイン実装

--- a/Yuzu.Plugins/Yuzu.Plugins.csproj
+++ b/Yuzu.Plugins/Yuzu.Plugins.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPlugin.cs" />
+    <Compile Include="IScoreBookExportPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
