--- a/Yuzu/Yuzu.csproj
+++ b/Yuzu/Yuzu.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Drawing\DrawingContext.cs" />
     <Compile Include="Drawing\GraphicsExtensions.cs" />
     <Compile Include="Drawing\NoteGraphics.cs" />
+    <Compile Include="Media\SoundSource.cs" />
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Plugins\ScoreBookExportPluginArgs.cs" />
     <Compile Include="UI\ControlExtensions.cs" />
@@ -110,6 +111,12 @@
     </Compile>
     <Compile Include="UI\Forms\HighSpeedSelectionForm.Designer.cs">
       <DependentUpon>HighSpeedSelectionForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Forms\SoundSourceSelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\Forms\SoundSourceSelector.Designer.cs">
+      <DependentUpon>SoundSourceSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Forms\TimesignatureSelectionForm.cs">
       <SubType>Form</SubType>
@@ -165,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Forms\HighSpeedSelectionForm.resx">
       <DependentUpon>HighSpeedSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Forms\SoundSourceSelector.resx">
+      <DependentUpon>SoundSourceSelector.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Forms\TimesignatureSelectionForm.resx">
       <DependentUpon>TimesignatureSelectionForm.cs</DependentUpon>
