Yuzuをx86構成で置き換え

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ after_build:
 
       New-Item -Type directory $artifacts
 
-      Get-ChildItem Yuzu\bin\$env:CONFIGURATION | Copy-Item -Destination $artifacts -Recurse -Container
+      Get-ChildItem Yuzu\bin\x86\$env:CONFIGURATION | Copy-Item -Destination $artifacts -Recurse -Container
 
       Get-ChildItem $artifacts -File -Recurse -Exclude *.exe, *.dll, *.config, *.mp3 | Remove-Item
 
