--- a/Yuzu/packages.config
+++ b/Yuzu/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BASS.ASIO" version="1.3.1.2" targetFramework="net472" />
+  <package id="BASS.Native" version="2.4.12.2" targetFramework="net472" />
+  <package id="Bass.NetWrapper" version="2.4.12.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="System.Reactive" version="4.1.6" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
