--- a/Yuzu/Yuzu.csproj
+++ b/Yuzu/Yuzu.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Drawing\GraphicsExtensions.cs" />
     <Compile Include="Drawing\NoteGraphics.cs" />
     <Compile Include="Media\SoundManager.cs" />
+    <Compile Include="Media\SoundPreviewManager.cs" />
     <Compile Include="Media\SoundSource.cs" />
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Plugins\ScoreBookExportPluginArgs.cs" />
