ガイド音の対象にベル/敵弾の選択を実装

--- a/Yuzu/Yuzu.csproj
+++ b/Yuzu/Yuzu.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Collections\AVLTree.cs" />
     <Compile Include="Collections\CollectionExtensions.cs" />
+    <Compile Include="Configuration\ApplicationSettings.cs" />
     <Compile Include="Configuration\SettingsBase.cs" />
     <Compile Include="Configuration\SoundSettings.cs" />
     <Compile Include="Drawing\ColorProfile.cs" />
